--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "ng2-materialform",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./dist/ng2-materialform.js",
+  "homepage": "https://github.com/orlaqp/ng2-material-components",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/orlaqp/ng2-material-components"
+  },
   "scripts": {
     "postinstall": "typings install",
     "build": "gulp",
@@ -11,13 +16,16 @@
     "prerelease": "npm run build && npm test"
   },
   "keywords": [
-    "angular",
-    "2",
+    "angular2",
     "ng2",
     "material",
     "form"
   ],
   "author": "Orlando Quero",
+  "email": "orlaqp@binaryways.com",
+  "bugs": {
+    "url": "https://github.com/orlaqp/ng2-material-components/issues"
+  },
   "license": "MIT",
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
@@ -47,6 +55,7 @@
     "del": "^2.2.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "file-loader": "^0.9.0",
+    "gh-pages": "^0.11.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-cached": "^1.1.0",
     "gulp-compile-handlebars": "^0.6.1",
