--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "zone.js": "^0.6.14"
   },
   "devDependencies": {
+    "app-root-path": "^1.3.0",
     "bootstrap-sass": "^3.3.7",
     "browser-sync": "^2.14.0",
     "browser-sync-webpack-plugin": "^1.1.2",
@@ -69,6 +70,7 @@
     "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
+    "inquirer": "^1.1.2",
     "lazypipe": "^1.0.1",
     "markdown-loader": "^0.1.7",
     "merge2": "^1.0.2",
@@ -79,6 +81,7 @@
     "pug-loader": "^2.2.1",
     "q": "^1.4.1",
     "raw-loader": "^0.5.1",
+    "semver": "^5.3.0",
     "string-replace-loader": "^1.0.3",
     "style-loader": "^0.13.1",
     "systemjs": "^0.19.36",
