--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "raw-loader": "^0.5.1",
     "replace": "^0.3.0",
     "semver": "^5.3.0",
+    "simple-git": "^1.48.0",
     "string-replace-loader": "^1.0.3",
     "style-loader": "^0.13.1",
     "systemjs": "^0.19.36",
