--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-materialform",
-  "version": "0.0.2",
+  "version": "0.0.3-0",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./dist/ng2-materialform.js",
   "homepage": "https://github.com/orlaqp/ng2-material-components",
