--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-materialcomponents",
-  "version": "0.0.4-0",
+  "version": "0.0.3",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./dist/ng2-materialcomponents.js",
   "homepage": "https://github.com/orlaqp/ng2-material-components",
@@ -86,6 +86,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "simple-git": "^1.48.0",
+    "source-map-loader": "^0.1.5",
     "string-replace-loader": "^1.0.3",
     "style-loader": "^0.13.1",
     "systemjs": "^0.19.36",
