--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-materialcomponents",
-  "version": "0.0.6-0",
+  "version": "0.0.6",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./dist/ng2-materialcomponents.js",
   "homepage": "https://github.com/orlaqp/ng2-material-components",
@@ -25,6 +25,10 @@
   "email": "orlaqp@binaryways.com",
   "bugs": {
     "url": "https://github.com/orlaqp/ng2-material-components/issues"
+  },
+  "directories": {
+    "fonts": "./fonts",
+    "img": "./img"
   },
   "license": "MIT",
   "dependencies": {
