--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-materialcomponents",
-  "version": "0.0.7",
+  "version": "0.0.8-0",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./dist/ng2-materialcomponents.js",
   "homepage": "https://github.com/orlaqp/ng2-material-components",
