--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
+    "bootstrap-daterangepicker": "^2.1.24",
     "bootstrap-select": "^1.11.0",
     "core-js": "^2.4.1",
     "crel": "^3.0.0",
