--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "crel": "^3.0.0",
     "jquery": "^3.1.0",
     "moment": "^2.14.1",
+    "node-waves": "^0.7.5",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.14"
