--- a/package.json
+++ b/package.json
@@ -32,24 +32,30 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "bootstrap-daterangepicker": "^2.1.24",
-    "bootstrap-select": "^1.11.0",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "2.0.0",
+    
     "core-js": "^2.4.1",
-    "crel": "^3.0.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.23",
+
+    "angular2-in-memory-web-api": "0.0.20",
+    "bootstrap": "^3.3.6",
+
     "jquery": "^3.1.0",
     "moment": "^2.14.1",
     "node-waves": "^0.7.5",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.14"
+    "bootstrap-daterangepicker": "^2.1.24"
+    
   },
   "devDependencies": {
     "app-root-path": "^1.3.0",
