--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-material-components",
-  "version": "0.1.8",
+  "version": "0.1.9-0",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./ng2-material-components.js",
   "homepage": "https://github.com/orlaqp/ng2-material-components",
