upgraded ver to 0.2 to make it easy to follow with angular 2.x version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-material-components",
-  "version": "0.1.57-0",
+  "version": "0.2.0",
   "description": "Great colleciton of beautiful designed material components",
   "main": "./ng2-material-components.js",
   "homepage": "https://github.com/orlaqp/ng2-material-components",
