--- a/package.json
+++ b/package.json
@@ -31,29 +31,28 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/router": "^3.4.5",
-    
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "^5.0.3",
-    "zone.js": "^0.7.6",
-    "systemjs": "0.19.27",
-
+    "@angular/animations": "^4.0.0-rc.5",
+    "@angular/common": "^4.0.0-rc.5",
+    "@angular/compiler": "^4.0.0-rc.5",
+    "@angular/compiler-cli": "^4.0.0-rc.5",
+    "@angular/core": "^4.0.0-rc.5",
+    "@angular/forms": "^4.0.0-rc.5",
+    "@angular/http": "^4.0.0-rc.5",
+    "@angular/platform-browser": "^4.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^4.0.0-rc.5",
+    "@angular/platform-server": "^4.0.0-rc.5",
+    "@angular/router": "^4.0.0-rc.5",
     "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6",
-
+    "bootstrap-daterangepicker": "^2.1.24",
+    "core-js": "^2.4.0",
     "jquery": "^3.1.0",
     "moment": "^2.14.1",
     "node-waves": "^0.7.5",
-    "bootstrap-daterangepicker": "^2.1.24"
-    
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.3",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "app-root-path": "^1.3.0",
@@ -104,7 +103,7 @@
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.14.0",
-    "typescript": "^2.0.3",
+    "typescript": "^2.2.1",
     "typescript-compiler": "^1.4.1-2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
