--- a/package.json
+++ b/package.json
@@ -31,30 +31,30 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/animations": "^5.2.5",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/compiler-cli": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/platform-server": "^5.2.5",
+    "@angular/router": "^5.2.5",
     "@angular/upgrade": "2.0.0",
-    
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.23",
-
     "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6",
-
+    "bootstrap-daterangepicker": "^2.1.24",
+    "core-js": "^2.4.1",
     "jquery": "^3.1.0",
     "moment": "^2.14.1",
     "node-waves": "^0.7.5",
-    "bootstrap-daterangepicker": "^2.1.24"
-    
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.5.6",
+    "systemjs": "0.19.27",
+    "typescript": "^2.4.2",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "app-root-path": "^1.3.0",
